--- a/src/main/resources/assets/koko/lang/en_us.json
+++ b/src/main/resources/assets/koko/lang/en_us.json
@@ -1,5 +1,5 @@
 {
   "ui.koko.player_skills_text": "Your Skills",
-  "keys.koko.name": "Koko",
+  "keys.koko.category": "Koko",
   "keys.koko.skills": "Open Skills"
 }
